Add Recommendation Pane.